Fix ClickGUI scrollbar

--- a/src/main/resources/gui/style.css
+++ b/src/main/resources/gui/style.css
@@ -41,14 +41,15 @@ body {
 
 .hwnd-content::-webkit-scrollbar {
   width: 5px; /* Adjust the width of the scrollbar */
+  background-color: transparent;
 }
 
 .hwnd-content::-webkit-scrollbar-track {
   background-color: transparent; /* Set the background color of the scrollbar track */
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: #4A4A4A; /* Set the color of the scrollbar thumb */
+.hwnd-content::-webkit-scrollbar-thumb {
+  background-color: #C2C2C2; /* Set the color of the scrollbar thumb */
   border-radius: 5px; /* Adjust the border-radius to make it rounded */
 }
 
@@ -65,8 +66,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .hwnd-head:hover {
-background:#2D2D2D;
-transition: .2s;
+  background: #2D2D2D;
+  transition: .2s;
 }
 
 p{
@@ -100,12 +101,12 @@ h1,h2,h3,h4,h5{
 
 
 .module {
-background:#5A5A5A;
-width:100%;
-height: 100%;
-border-radius:10px;
-padding-bottom:2px;
-transition: all .2s;
+  background: #5A5A5A;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  padding-bottom: 2px;
+  transition: all .2s;
 }
 
 .expanded {
@@ -113,22 +114,22 @@ transition: all .2s;
 }
 
 .module:hover {
-background:#4A4A4A;
-transition: .2s;
+  background: #4A4A4A;
+  transition: .2s;
 }
 
 .first-module {
-margin-top:0px;
+  margin-top: 0px;
 }
 
 .body{
   background: #2D2D2D;
   border-radius: 5px;
-  padding:4px;
-  margin:4px;
+  padding: 4px;
+  margin: 4px;
 }
 
 .element-descriptor {
-  margin-top:10px;
-  margin-bottom:5px;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
